Updated notebooks to be inline with the matcher API

--- a/notebooks/Ciratefi.ipynb
+++ b/notebooks/Ciratefi.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -15,7 +23,7 @@
     "from autocnet.examples import get_path\n",
     "from autocnet.graph.network import CandidateGraph\n",
     "from autocnet.graph.edge import Edge\n",
-    "from autocnet.matcher.feature import FlannMatcher\n",
+    "from autocnet.matcher.cpu_matcher import FlannMatcher\n",
     "from autocnet.matcher import ciratefi\n",
     "\n",
     "\n",
