--- a/notebooks/Suppression vis Disk Covering.ipynb
+++ b/notebooks/Suppression vis Disk Covering.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "from autocnet.examples import get_path\n",
     "from autocnet.graph.network import CandidateGraph\n",
-    "from autocnet.matcher.feature import FlannMatcher\n",
+    "from autocnet.matcher.cpu_matcher import FlannMatcher\n",
     "from autocnet.matcher.suppression_funcs import distance\n",
     "\n",
     "from IPython.display import display\n",
@@ -238,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
