--- a/notebooks/VoroniTesting.ipynb
+++ b/notebooks/VoroniTesting.ipynb
@@ -34,7 +34,7 @@
     "from unittest.mock import Mock\n",
     "from unittest.mock import MagicMock\n",
     "from unittest.mock import PropertyMock\n",
-    "from autocnet.matcher.feature import FlannMatcher\n",
+    "from autocnet.matcher.cpu_matcherimport FlannMatcher\n",
     "from scipy.spatial import Voronoi, voronoi_plot_2d\n",
     "import matplotlib.path as mpath\n",
     "import matplotlib.patches as mpatch\n",
