--- a/notebooks/Tutorial with Visualization.ipynb
+++ b/notebooks/Tutorial with Visualization.ipynb
@@ -23,7 +23,7 @@
     "from autocnet.examples import get_path\n",
     "from autocnet.graph.network import CandidateGraph\n",
     "from autocnet.graph.edge import Edge\n",
-    "from autocnet.matcher.feature import FlannMatcher\n",
+    "from autocnet.matcher.cpu_matcher import FlannMatcher\n",
     "\n",
     "from IPython.display import display\n",
     "\n",
@@ -473,9 +473,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [autocnet2]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [autocnet2]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
